--- a/iframe/package.json
+++ b/iframe/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
+    "jsdom": "^25.0.1",
+    "puppeteer": "^23.10.1",
     "request": "^2.88.2"
   }
 }
